--- a/index.html
+++ b/index.html
@@ -1,39 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>TODO LIST</title>
-<link rel="stylesheet" href="main.css" />
-</head>
-<body>
-<header>
-    <h1>TODO LIST</h1>
-    <form id="task-form">
-    <input type="text" id="task-input" placeholder="할 일을 입력하세요">
-    <input type="submit" id="task-submit" value="ADD">
-    </form>
-</header>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>TODO LIST</title>
+        <link rel="stylesheet" href="main.css" />
+    </head>
+    <body>
+        <header>
+        <h1>TODO LIST</h1>
+        <form id="new-task-form">
+            <input
+            type="text"
+            id="new-task-input"
+            placeholder="할 일을 입력하세요"
+            />
+            <input type="submit" id="new-task-submit" value="ADD"" />
+        </form>
+        </header>
 
-<main>
-    <section class="task-list">
-    <h2>오늘의 할 일</h2>
-    <div id="tasks">
+        <main>
+        <section class="task-list">
+            <h2>할 일 목록</h2>
+            <div id="tasks">
             <!-- <div class="task">
                 <div class="content">
-                    <input type="text" class="text" value="study" readonly />
+                <input type="text" class="text" value="study" readonly />
                 </div>
-                <div class="buttons">
-                    <button class="edit">Edit</button>
-                    <button class="complete">Complete</button>
-                    <button class="delete">Delete</button>
+                <div class="actions">
+                <button class="edit">Edit</button>
+                <button class="delete">Delete</button>
                 </div>
             </div> -->
-    </div>
-    </section>
-</main>
+            </div>
+        </section>
+        </main>
 
-<script src="main.js"></script>
-</body>
+        <script src="main.js"></script>
+    </body>
 </html>
